refactor: remove unused legacy components and infrastructure
- Remove deprecated webhook action handlers and command registry
- Delete obsolete CLI client and task runner implementations
- Clean up unused persistence entities and repositories
- Remove legacy rate limiter and attachment downloader
- Delete outdated constants and exception classes
- Remove unused conversation and memory management components